--- a/backend/package.json
+++ b/backend/package.json
@@ -1,1 +1,21 @@
-{"name":"cryptodash-backend","version":"1.0.0","main":"server.js","type":"commonjs","scripts":{"dev":"nodemon server.js","start":"node server.js"},"engines":{"node":">=18"},"dependencies":{"bcrypt":"^5.1.1","cors":"^2.8.5","dotenv":"^16.4.5","express":"^4.19.2","jsonwebtoken":"^9.0.2","mongodb":"^6.19.0","mongodb-memory-server":"^10.2.0","mongoose":"^8.5.0"},"devDependencies":{"nodemon":"^3.1.0"}}
+{
+  "name": "cryptodash-backend",
+  "version": "1.0.0",
+  "type": "commonjs",
+  "main": "server.js",
+  "scripts": {
+    "start": "node server.js"
+  },
+  "engines": {
+    "node": "20.x"
+  },
+  "dependencies": {
+    "bcryptjs": "^2.4.3",
+    "cors": "^2.8.5",
+    "dotenv": "^16.4.5",
+    "express": "^4.19.2",
+    "jsonwebtoken": "^9.0.2",
+    "mongoose": "^8.5.3",
+    "mongodb-memory-server": "^10.1.4"
+  }
+}
