--- a/.gitignore
+++ b/.gitignore
@@ -1,16 +1,15 @@
+# שורש + תתי־פרויקטים
 node_modules/
-**/node_modules/
-npm-debug.log*
-yarn-debug.log*
-yarn-error.log*
-
-# Builds / Dev
 dist/
 build/
-**/.cache/
-.vercel/
-.netlify/
+*.log
+npm-debug.log*
+pnpm-debug.log*
+.vscode/
+.DS_Store
+coverage/
 
-# Env / secrets
-.env
+# קבצי סביבה (אל תשכחי להשאיר .env.example ב-git)
 **/.env
+**/.env.* 
+!**/.env.example
