--- a/frontend/package.json
+++ b/frontend/package.json
@@ -1,27 +1,30 @@
 {
-  "name": "cryptodash-frontend",
-  "version": "1.0.0",
+  "name": "cryptodash-fronted",
   "private": true,
+  "version": "1.0.0",
   "type": "module",
   "scripts": {
     "dev": "vite",
     "build": "vite build",
-    "preview": "vite preview --port 5173"
+    "preview": "vite preview",
+    "typecheck": "tsc --noEmit"
   },
   "dependencies": {
-    "axios": "^1.7.2",
+    "axios": "^1.11.0",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
-    "react-router-dom": "^6.26.1"
+    "react-router-dom": "^6.27.0"
   },
   "devDependencies": {
-    "@tailwindcss/postcss": "^4.1.12",
-    "@types/react": "^18.3.3",
+    "@types/react": "^18.3.5",
     "@types/react-dom": "^18.3.0",
-    "@vitejs/plugin-react": "^4.7.0",
-    "postcss": "^8.5.6",
-    "tailwindcss": "^4.1.12",
+    "autoprefixer": "^10.4.19",
+    "postcss": "^8.4.38",
+    "tailwindcss": "^4.0.0",
     "typescript": "^5.5.4",
-    "vite": "^5.4.2"
+    "vite": "^7.1.5"
+  },
+  "engines": {
+    "node": ">=20.19"
   }
 }
