--- a/backend/package.json
+++ b/backend/package.json
@@ -1,21 +1,28 @@
 {
   "name": "cryptodash-backend",
+  "private": true,
   "version": "1.0.0",
-  "type": "commonjs",
   "main": "server.js",
   "scripts": {
+    "dev": "nodemon server.js",
     "start": "node server.js"
   },
-  "engines": {
-    "node": "20.x"
-  },
   "dependencies": {
-    "bcryptjs": "^2.4.3",
+    "axios": "^1.11.0",
+    "bcrypt": "^5.1.1",
     "cors": "^2.8.5",
     "dotenv": "^16.4.5",
     "express": "^4.19.2",
+    "express-rate-limit": "^7.4.0",
+    "helmet": "^7.1.0",
     "jsonwebtoken": "^9.0.2",
-    "mongoose": "^8.5.3",
-    "mongodb-memory-server": "^10.1.4"
+    "mongoose": "^8.6.1",
+    "morgan": "^1.10.0"
+  },
+  "devDependencies": {
+    "nodemon": "^3.1.0"
+  },
+  "engines": {
+    "node": ">=20.19"
   }
 }
