--- a/frontend/.gitignore
+++ b/frontend/.gitignore
@@ -1,24 +1,15 @@
-# Logs
-logs
+# שורש + תתי־פרויקטים
+node_modules/
+dist/
+build/
 *.log
 npm-debug.log*
-yarn-debug.log*
-yarn-error.log*
 pnpm-debug.log*
-lerna-debug.log*
-
-node_modules
-dist
-dist-ssr
-*.local
-
-# Editor directories and files
-.vscode/*
-!.vscode/extensions.json
-.idea
+.vscode/
 .DS_Store
-*.suo
-*.ntvs*
-*.njsproj
-*.sln
-*.sw?
+coverage/
+
+# קבצי סביבה (אל תשכחי להשאיר .env.example ב-git)
+**/.env
+**/.env.* 
+!**/.env.example
