--- a/backend/.env
+++ b/backend/.env
@@ -1,3 +1,3 @@
 PORT=8080
-MONGO_URI=mongodb+srv://<user>:<pass>@<cluster>/<db>?retryWrites=true&w=majority
-JWT_SECRET=replace-with-strong-secret
+MONGODB_URI=mongodb+srv://cryptodash_user:aviv1404@cluster0.umyqjo9.mongodb.net/cryptodash?retryWrites=true&w=majority&appName=Cluster0&authMechanism=SCRAM-SHA-256
+JWT_SECRET=change_me_please
