--- a/frontend/.gitignore
+++ b/frontend/.gitignore
@@ -1,15 +1,24 @@
-# שורש + תתי־פרויקטים
-node_modules/
-dist/
-build/
+# Logs
+logs
 *.log
 npm-debug.log*
+yarn-debug.log*
+yarn-error.log*
 pnpm-debug.log*
-.vscode/
-.DS_Store
-coverage/
+lerna-debug.log*
 
-# קבצי סביבה (אל תשכחי להשאיר .env.example ב-git)
-**/.env
-**/.env.* 
-!**/.env.example
+node_modules
+dist
+dist-ssr
+*.local
+
+# Editor directories and files
+.vscode/*
+!.vscode/extensions.json
+.idea
+.DS_Store
+*.suo
+*.ntvs*
+*.njsproj
+*.sln
+*.sw?
