--- a/package.json
+++ b/package.json
@@ -1,19 +1,9 @@
 {
-  "name": "cryptodash",
-  "private": true,
-  "scripts": {
-    "dev:server": "node backend/server.js",
-    "dev:client": "npm run dev --prefix fronted",
-    "dev": "concurrently \"npm:dev:server\" \"npm:dev:client\"",
-    "build": "npm run build --prefix fronted",
-    "preview": "npm run preview --prefix fronted",
-    "start": "node backend/server.js",
-    "postinstall": "npm ci --prefix fronted || npm i --prefix fronted"
+  "dependencies": {
+    "axios": "^1.11.0"
   },
   "devDependencies": {
-    "concurrently": "^8.2.2"
-  },
-  "engines": {
-    "node": ">=20.19"
+    "@types/axios": "^0.9.36",
+    "vite": "^7.1.5"
   }
 }
